Prevent realign on window size change

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,8 +61,8 @@
 	} );
 	
 	$( window ).resize( function() {
-		centerBackground();
-		repositionInfo();
+		//centerBackground();
+		//repositionInfo();
 	} );
 	
 	function centerBackground() {
