--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,16 +9,16 @@
 <div id='content'>
 	<h1 class='title'>Should I go tubing today?</h1>
 
-	<p class='verdict <%= verdict_class(@river_conditions.verdict) %>'>
-		<%= verdict_text(@river_conditions.verdict) %>
+	<p class='verdict <%= verdict_class(@conditions.verdict) %>'>
+		<%= verdict_text(@conditions.verdict) %>
 	</p>
 
 	<div id='left'>
 		<h2>River</h2>
 
 		<p class='data heading'>
-			<%= river_description(@river_conditions.cfs) %>
-			<p class='data'><%= @river_conditions.cfs %> cfs</p>
+			<%= river_description(@conditions.cfs) %>
+			<p class='data'><%= @conditions.cfs %> cfs</p>
 		</p>
 
 	</div>
@@ -27,19 +27,37 @@
 		<h2>Weather</h2>
 
 		<p class='data heading'>
-			<%= weather_description(@river_conditions.temperature,
-						@river_conditions.today_high,
-						@river_conditions.is_good) %>
+			<%= weather_description(@conditions.temperature,
+						@conditions.today_high,
+						@conditions.is_good) %>
 		</p>
 
 		<p class='data'>
-			<%= @river_conditions.temperature %> F, <%= @river_conditions.condition %>
+			<%= @conditions.temperature %> F, <%= @conditions.condition %>
 		</p>
 
 		<p class='data'>
-			High: <%= @river_conditions.today_high %> F, <%= @river_conditions.today_condition %>
+			High: <%= @conditions.today_high %> F, <%= @conditions.today_condition %>
 		</p>
 
 	</div>
 
 </div>
+
+<script type='text/javascript'>
+
+	$( document ).ready( function(){
+			centerBackground();
+	} );
+
+	function centerBackground() {
+		var windowWidth = $( window ).width();
+		var windowHeight = $( window ).height();
+
+		if( windowWidth > windowHeight ) {
+			$( "#background-image" ).width( windowWidth );
+		} else {
+			$( "#background-image" ).height( windowHeight );
+		}
+	}
+</script>
