--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
 		<%= verdict_text(@conditions.verdict) %>
 	</p>
 
-	<div id='left'>
+	<div id='left' class='outdoors-data'>
 		<h2>River</h2>
 
 		<p class='data heading'>
@@ -19,7 +19,7 @@
 
 	</div>
 
-	<div id='right'>
+	<div id='right' class='outdoors-data'>
 		<h2>Weather</h2>
 
 		<p class='data heading'>
