--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,37 +5,8 @@
 <div id='content'>
 	<h1 class='title'>Should I go tubing today?</h1>
 
-	<p class='verdict <%= verdict_class(@conditions.verdict) %>'>
-		<%= verdict_text(@conditions.verdict) %>
+	<p class='pending-verdict'>
+		One sec...
 	</p>
-
-	<div id='left' class='outdoors-data'>
-		<h2>River</h2>
-
-		<p class='data heading'>
-			<%= river_description(@conditions.cfs) %>
-			<p class='data'><%= @conditions.cfs %> cfs</p>
-		</p>
-
-	</div>
-
-	<div id='right' class='outdoors-data'>
-		<h2>Weather</h2>
-
-		<p class='data heading'>
-			<%= weather_description(@conditions.temperature,
-						@conditions.today_high,
-						@conditions.is_good) %>
-		</p>
-
-		<p class='data'>
-			<%= @conditions.temperature %> F, <%= @conditions.condition %>
-		</p>
-
-		<p class='data'>
-			High: <%= @conditions.today_high %> F, <%= @conditions.today_condition %>
-		</p>
-
-	</div>
 
 </div>
